Added version catalog toml configuration to manage libraries and plugins for multimodule architecture

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+weather_api_key = "384676e3678a47cfbe6173913230109"
+dev_base_url = "http://api.weatherapi.com/v1/"
+prod_base_url = "http://api.weatherapi.com/v1/"
