--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,8 +18,8 @@ v-compose-activity = "1.7.2"
 v-lifecycle-runtime-ktx = "2.6.1"
 
 [libraries]
-junit = {module = "junit:junit = version.ref", version.ref = "v-junit"}
-ext-junit = {module = "androidx.test.ext:junit = version.ref", version.ref = "v-ext-junit"}
+junit = {module = "junit:junit", version.ref = "v-junit"}
+ext-junit = {module = "androidx.test.ext:junit", version.ref = "v-ext-junit"}
 espresso = {module = "androidx.test.espresso:espresso-core", version.ref = "v-espresso"}
 ui-test-junit4 = {module = "androidx.compose.ui:ui-test-junit4"}
 lifecycle-runtime-ktx = {module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "v-lifecycle-runtime-ktx"}
