--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SmartWeatherForcastApp"
-        tools:targetApi="31">
+        android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.SmartWeatherForcastApp">
         <activity
             android:name=".MainActivity"
             android:exported="true"
