--- a/.github/workflows/SmartWeatherAppActions.yml
+++ b/.github/workflows/SmartWeatherAppActions.yml
@@ -14,6 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
       - name: Run a one-line script
         run: acho hello, world
       - name: Run a multi-line script
