--- a/.github/workflows/SmartWeatherAppActions.yml
+++ b/.github/workflows/SmartWeatherAppActions.yml
@@ -18,11 +18,14 @@ jobs:
         with:
           node-version: 16
 
-      - name: Run a one-line script
-        run: echo hello, world
-      - name: Run a multi-line script
-        run: 
-          echo check lint errors,
-          echo test build and generate apk.
+      - name: Run lint checks
+        run: ./gradlew lintDebug
+        
+      - name: Upload html test report
+        uses: actions/upload-artifact@v2
+        with:
+          name: index.html
+          path: app/build/reports/lint-results-debug.html
+          
         
     
