--- a/.github/workflows/SmartWeatherAppActions.yml
+++ b/.github/workflows/SmartWeatherAppActions.yml
@@ -17,6 +17,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
 
       - name: Run lint checks
         run: ./gradlew lintDebug
